sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:26: error: value and is not a member of Boolean
}while (parc1==true and parc2==true)
                    ^